Skip freezing check on setting temporary class path [Bug #17563]

Co-authored-by: ryannevell (Ryan Nevell) <ryan.nevell@gmail.com>